--- a/manifest.json
+++ b/manifest.json
@@ -18,18 +18,17 @@
   "name": "__MSG_extName__",
   "offline_enabled": false,
   "permissions":[
-    "*://*//www.billboard.com/*",
+    "*://*.billboard.com/*",
     "*://*.apple.com/*",
-    "*://*//ws.audioscrobbler.com/*",
-    "*://*//pitchfork.com/*",
-    "*://*//www.take40.com/*",
-    "*://*//np.absoluteradio.co.uk/*",
-    "*://*//hypem.com/*",
-    "*://*//www.amazon.com/*",
-    "*://*//feeds.feedburner.com/*"
+    "*://pitchfork.com/*",
+    "*://www.take40.com/*",
+    "*://np.absoluteradio.co.uk/*",
+    "*://hypem.com/*",
+    "*://*.amazon.com/*",
+    "*://feeds.feedburner.com/*"
   ],
   "short_name": "Boom!",
-  "version": "2.3.3",
+  "version": "2.3.4",
   "web_accessible_resources": [
     "img/*.*",
     "lib/*.*"
