--- a/manifest.json
+++ b/manifest.json
@@ -1,34 +1,28 @@
 {
   "author": "Mike Rottina",
-  "browser_action": {
-    "default_icon": "img/icon48.png",
+  "action": {
+    "browser_style": true,
+    "default_icon": {
+      "16": "/img/icon16.png",
+      "48": "/img/icon48.png",
+      "128": "/img/icon128.png"
+    },
+    "default_area": "navbar",
     "default_popup": "popup.html",
     "default_title": "__MSG_extName__"
   },
   "default_locale": "en_US",
   "description": "__MSG_extDescription__",
   "homepage_url": "https://twitter.com/rottina/",
-  "icons": {
-    "16": "img/icon16.png",
-    "48": "img/icon48.png",
-    "128": "img/icon128.png"
-  },
   "incognito": "spanning",
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "__MSG_extName__",
   "offline_enabled": false,
-  "permissions":[
+  "host_permissions": [
     "*://*.apple.com/*",
     "*://pitchfork.com/*",
-    "*://www.take40.com/*",
-    "*://np.absoluteradio.co.uk/*",
-    "*://feeds.feedburner.com/*",
-    "*://www.abc.net.au/*"
+    "*://feeds.feedburner.com/*"
   ],
   "short_name": "Boom!",
-  "version": "2.7.0",
-  "web_accessible_resources": [
-    "img/*.*",
-    "lib/*.*"
-  ]
+  "version": "2.8.0"
 }
