--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,9 @@
   "action": {
     "browser_style": true,
     "default_icon": {
-      "16": "/img/icon16.png",
-      "48": "/img/icon48.png",
-      "128": "/img/icon128.png"
+      "16": "img/icon16.png",
+      "48": "img/icon48.png",
+      "128": "img/icon128.png"
     },
     "default_area": "navbar",
     "default_popup": "popup.html",
