--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   },
   "default_locale": "en_US",
   "description": "__MSG_extDescription__",
-  "homepage_url": "https://twitter.com/rottina/",
+  "homepage_url": "https://x.com/rottina/",
   "incognito": "spanning",
   "manifest_version": 3,
   "name": "__MSG_extName__",
@@ -24,5 +24,5 @@
     "*://feeds.feedburner.com/*"
   ],
   "short_name": "Boom!",
-  "version": "2.9.2"
+  "version": "3.0.0"
 }
