add publisher url suffix

--- a/biome.json
+++ b/biome.json
@@ -1,12 +1,12 @@
 {
   "formatter": {
+    "attributePosition": "auto",
     "enabled": true,
     "formatWithErrors": false,
     "ignore": [],
-    "attributePosition": "auto",
     "indentStyle": "space",
     "indentWidth": 2,
-    "lineWidth": 80,
-    "lineEnding": "lf"
+    "lineEnding": "lf",
+    "lineWidth": 80
   }
 }
