--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
   },
   "default_locale": "en_US",
   "description": "__MSG_extDescription__",
-  "homepage_url": "https://x.com/rottina/",
+  "homepage_url": "https://chromewebstore.google.com/detail/boombastic/oiebiojhhafjfnbelgcfdbejekdomcel",
   "incognito": "spanning",
   "manifest_version": 3,
   "name": "__MSG_extName__",
