add custom json feed functionality

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
   "offline_enabled": false,
   "host_permissions": [
     "*://*.apple.com/*",
+    "*://*.githubusercontent.com/*",
     "*://pitchfork.com/*",
     "*://feeds.feedburner.com/*"
   ],
