--- a/biome.json
+++ b/biome.json
@@ -1,4 +1,7 @@
 {
+  "files": {
+    "ignore": ["_lib/**/*", "lib/**/*", "node_modules/**/*"]
+  },
   "formatter": {
     "attributePosition": "auto",
     "enabled": true,
