--- a/biome.json
+++ b/biome.json
@@ -1,6 +1,6 @@
 {
   "files": {
-    "ignore": ["_lib/**/*", "lib/**/*", "node_modules/**/*"]
+    "ignore": ["lib/**/*", "node_modules/**/*"]
   },
   "formatter": {
     "attributePosition": "auto",
